fix(dtl): remove unused code
Removes unused DTL code that significantly slows down the DTL when
syncing from L1.
