# packages/data-transport-layer/openapi.yml
@@ -323,69 +323,3 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionBatchResponse'
-
-  /stateroot/latest:
-    get:
-      summary: Returns the latest state root
-      description: |
-        This returns the latest state root appended to the State Commitment Chain
-      responses:
-        '200':
-          description: An object representing the latest state root
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StateRootResponse'
-
-  /stateroot/index/{index}:
-    get:
-      parameters:
-        - in: path
-          name: index
-          schema:
-            type: integer
-            format: "int64"
-          required: true
-      summary: Returns the state root by index
-      description: |
-        This returns a state root appended to the State Commitment Chain by index
-      responses:
-        '200':
-          description: An object representing the a state root
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StateRootResponse'
-
-  /batch/stateroot/latest:
-    get:
-      summary: Returns the latest state root batch
-      description: |
-        This returns the latest batch of state roots appended to the State Commitment Chain
-      responses:
-        '200':
-          description: An object representing the latest state root batch
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StateRootBatchResponse'
-
-  /batch/stateroot/index/{index}:
-    get:
-      summary: Returns the state root batch by index
-      parameters:
-        - in: path
-          name: index
-          schema:
-            type: integer
-            format: "int64"
-          required: true
-      description: |
-        This returns a state root batch appended to the State Commitment Chain by index
-      responses:
-        '200':
-          description: An object representing the state root batch by index
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StateRootBatchResponse'
