# packages/data-transport-layer/src/services/server/service.ts
@@ -15,8 +15,6 @@ import {
   ContextResponse,
   GasPriceResponse,
   EnqueueResponse,
-  StateRootBatchResponse,
-  StateRootResponse,
   SyncingResponse,
   TransactionBatchResponse,
   TransactionResponse,
@@ -581,136 +579,6 @@ export class L1TransportServer extends BaseService<L1TransportServerOptions> {
         return {
           batch,
           transactions,
-        }
-      }
-    )
-
-    this._registerRoute(
-      'get',
-      '/stateroot/latest',
-      async (req): Promise<StateRootResponse> => {
-        const backend = req.query.backend || this.options.defaultBackend
-        let stateRoot = null
-
-        switch (backend) {
-          case 'l1':
-            stateRoot = await this.state.db.getLatestStateRoot()
-            break
-          case 'l2':
-            stateRoot = await this.state.db.getLatestUnconfirmedStateRoot()
-            break
-          default:
-            throw new Error(`Unknown transaction backend ${backend}`)
-        }
-
-        if (stateRoot === null) {
-          return {
-            stateRoot: null,
-            batch: null,
-          }
-        }
-
-        const batch = await this.state.db.getStateRootBatchByIndex(
-          stateRoot.batchIndex
-        )
-
-        return {
-          stateRoot,
-          batch,
-        }
-      }
-    )
-
-    this._registerRoute(
-      'get',
-      '/stateroot/index/:index',
-      async (req): Promise<StateRootResponse> => {
-        const backend = req.query.backend || this.options.defaultBackend
-        let stateRoot = null
-
-        switch (backend) {
-          case 'l1':
-            stateRoot = await this.state.db.getStateRootByIndex(
-              BigNumber.from(req.params.index).toNumber()
-            )
-            break
-          case 'l2':
-            stateRoot = await this.state.db.getUnconfirmedStateRootByIndex(
-              BigNumber.from(req.params.index).toNumber()
-            )
-            break
-          default:
-            throw new Error(`Unknown transaction backend ${backend}`)
-        }
-
-        if (stateRoot === null) {
-          return {
-            stateRoot: null,
-            batch: null,
-          }
-        }
-
-        const batch = await this.state.db.getStateRootBatchByIndex(
-          stateRoot.batchIndex
-        )
-
-        return {
-          stateRoot,
-          batch,
-        }
-      }
-    )
-
-    this._registerRoute(
-      'get',
-      '/batch/stateroot/latest',
-      async (): Promise<StateRootBatchResponse> => {
-        const batch = await this.state.db.getLatestStateRootBatch()
-
-        if (batch === null) {
-          return {
-            batch: null,
-            stateRoots: [],
-          }
-        }
-
-        const stateRoots = await this.state.db.getStateRootsByIndexRange(
-          BigNumber.from(batch.prevTotalElements).toNumber(),
-          BigNumber.from(batch.prevTotalElements).toNumber() +
-            BigNumber.from(batch.size).toNumber()
-        )
-
-        return {
-          batch,
-          stateRoots,
-        }
-      }
-    )
-
-    this._registerRoute(
-      'get',
-      '/batch/stateroot/index/:index',
-      async (req): Promise<StateRootBatchResponse> => {
-        const batch = await this.state.db.getStateRootBatchByIndex(
-          BigNumber.from(req.params.index).toNumber()
-        )
-
-        if (batch === null) {
-          return {
-            batch: null,
-            stateRoots: [],
-          }
-        }
-
-        const stateRoots = await this.state.db.getStateRootsByIndexRange(
-          BigNumber.from(batch.prevTotalElements).toNumber(),
-          BigNumber.from(batch.prevTotalElements).toNumber() +
-            BigNumber.from(batch.size).toNumber()
-        )
-
-        return {
-          batch,
-          stateRoots,
         }
       }
     )
